[package]
name = "khronos-server"
version = "0.1.0"
edition = "2024"

[dependencies]
khronos-core = { path = "../core" }
khronos-db = { path = "../db" }
tonic = "0.13"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13"
