[package]
name = "khronos-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
khronos-core = { path = "../core" }
tonic = "0.13"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13"
